# nim

./: CMakeLists.txt  Easy.cpp  Easy.h  Hard.cpp  Hard.h  Humain.cpp  Humain.h  Normal.cpp  Normal.h  Robot.cpp  Robot.h  Strategy.cpp  Strategy.h  configuration.cpp  configuration.h  main.cpp  nimASCIIRenderer.cpp  nimASCIIRenderer.h  nimException.h  nimGenerator.cpp  nimGenerator.h  nimIA.h  nimRenderer.h  nimSDLRenderer.cpp  nimSDLRenderer.h  nimTurn.h  player.cpp  player.h
